module(name = "nighthawk", version="", repo_name = "com_github_envoyproxy_nighthawk")

bazel_dep(name = "grpc", version = "1.56.3", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
# -- bazel_dep definitions -- #
